chore: managed lookupByRID (not returning null)
(cherry picked from commit 67bf3d1b70c0430d71835062702b361057af71cb)